avoid break inside highlight

--- a/src/components/04-Components/highlight/_components.highlight.css
+++ b/src/components/04-Components/highlight/_components.highlight.css
@@ -3,6 +3,7 @@
    ====================================================================== */
 
 .c-highlight {
+  @extend .u-break-avoid;
   @apply
     py-24
     bg-primary-100
